chore: bump version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "guilded-next-auth",
-    "version": "1.0.1",
+    "name": "next-auth-guilded",
+    "version": "1.0.0",
     "description": "Provider for the unofficial Guilded OAuth API (https://authlink.guildedapi.com) 🚀",
     "author": "Zaid \"Nico\" <contact@nico.engineer>",
     "license": "MIT",
