--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "build": "npx tsc && npx gen-esm-wrapper . ./dist/index.mjs",
         "lint": "npx eslint src/ --ext .ts,.js",
         "lint:fix": "npm run lint -- --fix",
-        "prepublishOnly": "npm run lint && npx rimraf dist/ && npm run build",
+        "prepublishOnly": "npx rimraf dist/ && npm run build",
         "prepare": "husky install",
         "prettier": "prettier --write **/*.{ts,js,json,yml,yaml}"
     },
